--- a/projects/2020/x/network/network/templates/network/register.html
+++ b/projects/2020/x/network/network/templates/network/register.html
@@ -1,4 +1,4 @@
-{% extends "mail/layout.html" %}
+{% extends "network/layout.html" %}
 
 {% block body %}
 
@@ -11,7 +11,10 @@
     <form action="{% url 'register' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
-            <input class="form-control" type="email" name="email" placeholder="Email Address" autocomplete="off">
+            <input class="form-control" autofocus type="text" name="username" placeholder="Username">
+        </div>
+        <div class="form-group">
+            <input class="form-control" type="email" name="email" placeholder="Email Address">
         </div>
         <div class="form-group">
             <input class="form-control" type="password" name="password" placeholder="Password">
